Update index.html to under development landing page - remove disability mention, add football manager and snooker/pool advice

--- a/audio-recording.html
+++ b/audio-recording.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karaoke Service - Kenneth Durie</title>
+    <title>Audio & Recording Service - Kenneth Durie</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,8 +13,8 @@
             <p class="subtitle">Disability Support Network</p>
             <nav class="main-nav" id="navigation" role="navigation" aria-label="Main navigation">
                 <button class="mobile-menu-toggle" aria-label="Toggle menu" aria-expanded="false" id="menu-toggle">
-                    <span class="menu-icon">☰</span>
-                    <span class="menu-close">✕</span>
+                    <span class="menu-icon" style="display: inline;">☰</span>
+                    <span class="menu-close" style="display: none;">✕</span>
                 </button>
                 <ul class="nav-menu">
                     <li><a href="index.html" class="nav-link">Home</a></li>
@@ -26,7 +26,8 @@
                     <li><a href="ideas-generator.html" class="nav-link">Ideas</a></li>
                     <li><a href="taxi-campaign.html" class="nav-link">Taxi Campaign</a></li>
                     <li><a href="large-print.html" class="nav-link">Large Print</a></li>
-                    <li><a href="karaoke-service.html" class="nav-link active">Karaoke Service</a></li>
+                    <li><a href="karaoke-service.html" class="nav-link">Karaoke Service</a></li>
+                    <li><a href="audio-recording.html" class="nav-link active">Audio & Recording</a></li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
@@ -40,59 +41,81 @@
     <main id="main-content" role="main">
         <div class="container">
             <section class="content">
-                <h2>Karaoke Service with Live Music Interaction</h2>
-                <p>Professional karaoke entertainment that brings people together. We provide live music interaction and can scale to any sized venue you need - from intimate gatherings to large celebrations.</p>
+                <h2>Audio & Recording Service</h2>
+                <p>Professional audio recording services and AI-powered care plan assistance. We consult and tailor everything to your individual needs.</p>
                 
                 <div class="content-box">
-                    <h3>Our Service</h3>
-                    <p>Our karaoke service offers live music interaction, creating an engaging and inclusive entertainment experience for all your guests. Whether you're planning a wedding, birthday party, corporate event, or any celebration, we bring the music and the fun.</p>
-                    <p><strong>We can scale to any sized venue you need</strong> - from small intimate gatherings to large wedding receptions and corporate events. Our professional equipment and experienced team ensure everyone has a great time.</p>
-                </div>
-
-                <div class="content-box">
-                    <h3>Inclusive Entertainment for All</h3>
-                    <p>Have a disabled guest for a wedding? We make sure they are catered for at the event without any sort of special treatment and attention. We believe in true inclusion - everyone participates, everyone enjoys, everyone belongs.</p>
-                    <p><strong>We are the same as you in many ways - a lot of the time we are better.</strong> Our service is designed to be naturally inclusive, ensuring all guests can participate and enjoy the karaoke experience equally. No separate arrangements, no awkward moments, just great entertainment for everyone.</p>
-                </div>
-
-                <div class="content-box">
-                    <h3>What We Offer</h3>
+                    <h3>Sing a Song Recording Service</h3>
+                    <p>Have a song you want to record? Our professional audio recording service helps you create high-quality recordings of your favorite songs. Whether it's for a special occasion, a gift, or just for fun, we provide a professional recording experience tailored to your needs.</p>
                     <ul class="media-list">
-                        <li>Live music interaction and professional sound equipment</li>
-                        <li>Extensive song library covering all genres and decades</li>
-                        <li>Experienced hosts to keep the party going</li>
-                        <li>Scalable service for any venue size</li>
-                        <li>Fully accessible and inclusive setup</li>
-                        <li>Professional lighting and visual effects</li>
-                        <li>Wireless microphones for maximum mobility</li>
-                        <li>Custom playlists tailored to your event</li>
+                        <li>Professional studio-quality recording</li>
+                        <li>Audio editing and mixing</li>
+                        <li>Multiple format delivery (MP3, WAV, etc.)</li>
+                        <li>Personalized song selection assistance</li>
+                        <li>Flexible recording sessions</li>
                     </ul>
                 </div>
 
                 <div class="content-box">
-                    <h3>Pricing</h3>
-                    <p><strong>Price on Application (POA)</strong></p>
-                    <p>Every event is unique, and we tailor our service to your specific needs. Contact us to discuss your event requirements, venue size, and any special considerations. We'll provide a personalized quote that fits your budget and ensures your event is a success.</p>
-                </div>
-
-                <div class="content-box">
-                    <h3>Perfect For</h3>
+                    <h3>AI Conversational Bot for Care Plans</h3>
+                    <p>Our innovative AI conversational bot assists in creating and managing care plans for your relatives. This intelligent system helps you navigate the complexities of care planning, providing guidance, reminders, and support tailored to your family's specific needs.</p>
+                    <p><strong>Features include:</strong></p>
                     <ul class="media-list">
-                        <li>Weddings and receptions</li>
-                        <li>Birthday celebrations</li>
-                        <li>Corporate events and team building</li>
-                        <li>Anniversary parties</li>
-                        <li>Community events</li>
-                        <li>Fundraising events</li>
-                        <li>Holiday celebrations</li>
-                        <li>Any occasion where people want to have fun!</li>
+                        <li>Personalized care plan creation and management</li>
+                        <li>24/7 conversational support and guidance</li>
+                        <li>Medication and appointment reminders</li>
+                        <li>Care plan updates and modifications</li>
+                        <li>Accessibility information and resources</li>
+                        <li>Family communication coordination</li>
+                        <li>Progress tracking and reporting</li>
                     </ul>
                 </div>
 
                 <div class="content-box">
-                    <h3>Get in Touch</h3>
-                    <p>Ready to make your event unforgettable? <a href="contact.html">Contact us</a> today to discuss your karaoke entertainment needs. We'll work with you to create an inclusive, fun-filled experience that brings everyone together.</p>
-                    <p>Let's make your celebration one to remember - where everyone can participate, everyone can enjoy, and everyone feels included.</p>
+                    <h3>Consultation & Tailored Services</h3>
+                    <p><strong>We consult and tailor things to the needs of anyone.</strong> Every individual has unique requirements, and we work closely with you to understand your specific needs and create customized solutions.</p>
+                    <p>Our consultation process includes:</p>
+                    <ul class="media-list">
+                        <li>Initial needs assessment</li>
+                        <li>Personalized service planning</li>
+                        <li>Ongoing support and adjustments</li>
+                        <li>Regular reviews and updates</li>
+                        <li>Flexible service delivery</li>
+                    </ul>
+                </div>
+
+                <div class="content-box">
+                    <h3>Business Partner Network</h3>
+                    <p><strong>Anything we can't help with, we outsource to a host of business partners.</strong> We've built a trusted network of professional partners to ensure you get the best possible support, even for services we don't provide directly.</p>
+                    <p>Our business partners cover a wide range of services including:</p>
+                    <ul class="media-list">
+                        <li>Specialist healthcare services</li>
+                        <li>Legal and advocacy support</li>
+                        <li>Financial planning and benefits advice</li>
+                        <li>Equipment and technology suppliers</li>
+                        <li>Transportation services</li>
+                        <li>Home adaptation specialists</li>
+                        <li>And much more</li>
+                    </ul>
+                    <p>We coordinate with our partners to ensure seamless service delivery and maintain quality standards across all referrals.</p>
+                </div>
+
+                <div class="content-box">
+                    <h3>How It Works</h3>
+                    <p>Getting started is simple:</p>
+                    <ol class="media-list" style="list-style: decimal; padding-left: 1.5rem;">
+                        <li><strong>Contact Us:</strong> Reach out through our contact page or phone</li>
+                        <li><strong>Consultation:</strong> We discuss your needs and requirements</li>
+                        <li><strong>Tailored Plan:</strong> We create a customized service plan for you</li>
+                        <li><strong>Service Delivery:</strong> We provide the services directly or connect you with trusted partners</li>
+                        <li><strong>Ongoing Support:</strong> We maintain regular contact to ensure everything meets your needs</li>
+                    </ol>
+                </div>
+
+                <div class="content-box">
+                    <h3>Get Started</h3>
+                    <p>Ready to explore our audio recording services or set up an AI care plan assistant? <a href="contact.html">Contact us</a> today to discuss your needs and discover how we can help you or your relatives.</p>
+                    <p>We're here to provide personalized support and connect you with the right services, whether we provide them directly or through our trusted partner network.</p>
                 </div>
             </section>
         </div>
