--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
                     <li><a href="taxi-campaign.html" class="nav-link">Taxi Campaign</a></li>
                     <li><a href="large-print.html" class="nav-link">Large Print</a></li>
                     <li><a href="karaoke-service.html" class="nav-link">Karaoke Service</a></li>
+                    <li><a href="audio-recording.html" class="nav-link">Audio & Recording</a></li>
                     <li><a href="contact.html" class="nav-link active">Contact</a></li>
                 </ul>
             </nav>
